--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-uglify": "^0.9.1",
-    "grunt-contrib-watch": "~0.5.0"
+    "compression": "^1.6.0",
+    "express": "^4.13.3",
+    "grunt": "0.4.1",
+    "grunt-concurrent": "^2.1.0",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-contrib-sass": "0.9.2",
+    "grunt-contrib-uglify": "0.9.1",
+    "grunt-contrib-watch": "0.5.0",
+    "grunt-nodemon": "^0.4.1",
+    "grunt-open": "^0.2.3",
+    "load-grunt-tasks": "3.4.0",
+    "path": "^0.12.7"
   }
 }
