--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt-contrib-sass": "0.9.2",
     "grunt-contrib-uglify": "0.9.1",
     "grunt-contrib-watch": "0.5.0",
+    "grunt-newer": "^1.1.1",
     "grunt-nodemon": "^0.4.1",
     "grunt-open": "^0.2.3",
     "load-grunt-tasks": "3.4.0",
