--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "devDependencies": {
-    "compression": "^1.6.0",
-    "express": "^4.13.3",
+  "name": "ChorusJS",
+  "version": "2.2.0",
+  "dependencies": {
+    "autoprefixer": "6.3.3",
+    "bower": "1.4.0",
     "grunt": "0.4.1",
-    "grunt-concurrent": "^2.1.0",
-    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-cli": "0.1.13",
+    "grunt-concurrent": "2.1.0",
+    "grunt-contrib-handlebars": "1.0.0",
+    "grunt-contrib-jshint": "0.11.3",
     "grunt-contrib-sass": "0.9.2",
     "grunt-contrib-uglify": "0.9.1",
     "grunt-contrib-watch": "0.5.0",
-    "grunt-newer": "^1.1.1",
-    "grunt-nodemon": "^0.4.1",
-    "grunt-open": "^0.2.3",
-    "load-grunt-tasks": "3.4.0",
-    "path": "^0.12.7"
+    "grunt-newer": "1.1.1",
+    "grunt-nodemon": "0.4.1",
+    "grunt-open": "0.2.3",
+    "load-grunt-tasks": "3.4.0"
+  },
+  "devDependencies": {
+    "compression": "1.6.0",
+    "express": "4.13.3",
+    "path": "0.12.7"
   }
 }
