--- a/bower.json
+++ b/bower.json
@@ -28,5 +28,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/mike-stumpf/chorus.js.git"
+  },
+  "dependencies": {
+    "bluebird": "3.3.4",
+    "handlebars": "4.0.5"
   }
 }
