--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-newer": "1.1.1",
     "grunt-nodemon": "0.4.1",
     "grunt-open": "0.2.3",
+    "grunt-postcss": "0.8.0",
     "load-grunt-tasks": "3.4.0"
   },
   "devDependencies": {
