npm modularisation - added typescript

--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
   "name": "ChorusJS",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "A JavaScript library for music theory",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --reporter spec",
-    "cover": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec test/*"
+    "build": "tsc",
+    "test": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec test/*"
   },
   "author": "mike-stumpf",
   "license": "MIT",
   "engines": {
     "node": ">=4.2.4"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mike-stumpf/chorus.js"
+  },
   "devDependencies": {
     "chai": "4.1.2",
     "coveralls": "3.0.0",
     "istanbul": "0.4.5",
-    "mocha": "5.0.5"
+    "mocha": "5.0.5",
+    "typescript": "2.8.1"
   }
 }
