--- a/package.json
+++ b/package.json
@@ -1,12 +1,7 @@
 {
   "name": "ChorusJS",
-  "version": "3.0.2",
+  "version": "3.0.3",
   "description": "A JavaScript library for music theory",
-  "main": "index.js",
-  "scripts": {
-    "build": "tsc",
-    "test": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec test/*"
-  },
   "author": "mike-stumpf",
   "license": "MIT",
   "engines": {
@@ -16,11 +11,26 @@
     "type": "git",
     "url": "https://github.com/mike-stumpf/chorus.js"
   },
+  "main": "./dist/src/index.js",
+  "types": "./dist/src/index.d.js",
+  "scripts": {
+    "build": "tsc",
+    "build-watch": "tsc --watch",
+    "typedoc": "typedoc --out ./docs --mode modules --tsconfig ./tsconfig.json ./dev/src/",
+    "posttypedoc": "shx cp .nojekyll docs/.nojekyll",
+    "test": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec dev/test/*"
+  },
   "devDependencies": {
+    "@types/chai": "4.1.2",
+    "@types/mocha": "5.0.0",
     "chai": "4.1.2",
     "coveralls": "3.0.0",
     "istanbul": "0.4.5",
     "mocha": "5.0.5",
+    "npm-run-all": "4.1.2",
+    "rimraf": "2.6.2",
+    "shx": "0.2.2",
+    "typedoc": "0.11.1",
     "typescript": "2.8.1"
   }
 }
