--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "shx": "0.2.2",
     "typedoc": "0.11.1",
     "typescript": "2.8.1"
+  },
+  "dependencies": {
+    "lodash": "4.17.5"
   }
 }
