code-conversion - assembled chord and scale primitives data

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "typings": "./dist/src/index.d.js",
   "scripts": {
     "build": "tsc",
-    "build-watch": "tsc --watch",
+    "start": "tsc --watch",
     "typedoc": "typedoc --out ./docs --mode modules --tsconfig ./tsconfig.json ./dev/src/",
     "posttypedoc": "shx cp .nojekyll docs/.nojekyll",
     "test": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec dev/test/*"
