--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "typescript": "2.8.1"
   },
   "dependencies": {
+    "@types/bluebird-global": "3.5.5",
+    "bluebird": "3.5.1",
     "lodash": "4.17.5"
   }
 }
