--- a/package.json
+++ b/package.json
@@ -14,17 +14,27 @@
   "main": "./dist/src/index.js",
   "typings": "./dist/src/index.d.js",
   "scripts": {
-    "build": "tsc",
-    "start": "tsc --watch",
+    "start": "npm-run-all --parallel watch-ts",
     "typedoc": "typedoc --out ./docs --mode modules --tsconfig ./tsconfig.json ./dev/src/",
     "posttypedoc": "shx cp .nojekyll docs/.nojekyll",
-    "test": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec dev/tests/*.test.js dev/tests/**/*.test.js"
+    "test": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec dev/tests/*.test.js dev/tests/**/*.test.js",
+    "build-hbs": "handlebars -m ./dev/src/layouts/*.hbs -f ./dist/layouts.js -c",
+    "build-ts": "tsc",
+    "postbuild-ts": "browserify ./dist/index.js --standalone Hauptstimme > ./dist/bundle.js",
+    "watch-hbs": "chokidar './dev/src/layouts/**/*.hbs' -c 'npm run build-hbs'",
+    "watch-ts": "chokidar './dev/**/*.ts' -c 'npm run build-ts'",
+    "version-patch": "npm version patch",
+    "version-minor": "npm version minor",
+    "version-major": "npm version major"
   },
   "devDependencies": {
     "@types/chai": "4.1.2",
     "@types/mocha": "5.0.0",
+    "browserify": "16.2.0",
     "chai": "4.1.2",
+    "chokidar-cli": "1.2.0",
     "coveralls": "3.0.0",
+    "handlebars": "4.0.11",
     "istanbul": "0.4.5",
     "mocha": "5.0.5",
     "npm-run-all": "4.1.2",
