--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hauptstimme-js",
-  "version": "3.0.5",
+  "version": "3.0.6",
   "description": "A JavaScript library for music theory",
   "author": "mike-stumpf",
   "license": "MIT",
@@ -9,23 +9,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mike-stumpf/chorus.js"
+    "url": "https://github.com/mike-stumpf/hauptstimme.js"
   },
-  "main": "./dist/src/index.js",
-  "typings": "./dist/src/index.d.js",
+  "main": "./dist/src/exports.js",
+  "typings": "./dist/src/exports.d.js",
   "scripts": {
     "start": "npm-run-all --parallel watch-ts",
     "typedoc": "typedoc --out ./docs --mode modules --tsconfig ./tsconfig.json ./dev/src/",
     "posttypedoc": "shx cp .nojekyll docs/.nojekyll",
     "test": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec dev/tests/*.test.js dev/tests/**/*.test.js",
-    "build-hbs": "handlebars -m ./dev/src/layouts/*.hbs -f ./dist/layouts.js -c",
     "build-ts": "tsc",
-    "postbuild-ts": "browserify ./dist/index.js --standalone Hauptstimme > ./dist/bundle.js",
-    "watch-hbs": "chokidar './dev/src/layouts/**/*.hbs' -c 'npm run build-hbs'",
-    "watch-ts": "chokidar './dev/**/*.ts' -c 'npm run build-ts'",
-    "version-patch": "npm version patch",
-    "version-minor": "npm version minor",
-    "version-major": "npm version major"
+    "postbuild-ts": "browserify ./dist/exports.js --standalone HauptstimmeJS --debug | uglifyjs --source-map --output ./dist/bundle.js > ./dist/bundle.js",
+    "watch-ts": "chokidar './dev/**/*.ts' -c 'npm run build-ts'"
   },
   "devDependencies": {
     "@types/chai": "4.1.2",
@@ -34,14 +29,14 @@
     "chai": "4.1.2",
     "chokidar-cli": "1.2.0",
     "coveralls": "3.0.0",
-    "handlebars": "4.0.11",
     "istanbul": "0.4.5",
     "mocha": "5.0.5",
     "npm-run-all": "4.1.2",
     "rimraf": "2.6.2",
     "shx": "0.2.2",
     "typedoc": "0.11.1",
-    "typescript": "2.8.1"
+    "typescript": "2.8.1",
+    "uglify-js": "3.3.20"
   },
   "dependencies": {
     "@types/bluebird-global": "3.5.5",
