--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hauptstimme-js",
-  "version": "3.0.7",
+  "version": "3.1.0",
   "description": "A JavaScript library for music theory",
   "author": "mike-stumpf",
   "license": "MIT",
@@ -11,8 +11,8 @@
     "type": "git",
     "url": "https://github.com/mike-stumpf/hauptstimme.js"
   },
-  "main": "./dist/src/exports.js",
-  "typings": "./dist/src/exports.d.js",
+  "main": "./dist/exports.js",
+  "typings": "./dist/exports.d.js",
   "scripts": {
     "start": " tsc --watch",
     "typedoc": "typedoc --out ./docs --mode modules --tsconfig ./tsconfig.json ./dev/src/",
