--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@types/bluebird-global": "3.5.5",
+    "@types/node": "8.0.0",
     "bluebird": "3.5.1",
     "lodash": "4.17.5"
   }
