--- a/package.json
+++ b/package.json
@@ -11,6 +11,16 @@
     "type": "git",
     "url": "https://github.com/mike-stumpf/hauptstimme.js"
   },
+  "keywords": [
+    "music",
+    "theory",
+    "guitar",
+    "piano",
+    "scale",
+    "chord",
+    "tone",
+    "note"
+  ],
   "main": "./dist/exports.js",
   "typings": "./dist/exports.d.js",
   "scripts": {
