build - optimised build size for production; removed bluebird library and upgraded target version to es2015; minimised lodash imports; added files and folders to .npmignore

--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,23 @@
-tsconfig.json
-.travis.yml
-.nojekyll
-dev/
-docs/
-dist/test/
-.npmignore
 .idea/
-coverage/
+
+.gitignore
+.nojekyll
+.npmignore
+.npmrc
+.travis.yml
+package-lock.json
+README.md
 todo.txt
+tsconfig.json
+yarn.lock
+
+coverage/
+dev/
+dist/constants
+dist/exports/
+dist/interfaces/
+dist/src
+dist/exports.d.ts
+dist/exports.js
+dist/exports.js.map
+docs/
