--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "typedoc": "typedoc --out ./docs --mode modules --tsconfig ./tsconfig.json ./dev/src/",
     "posttypedoc": "shx cp .nojekyll docs/.nojekyll",
     "test": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec dev/tests/*.test.js dev/tests/**/*.test.js",
-    "build-ts": "tsc && npm run typedoc",
-    "postbuild-ts": "browserify ./dist/exports.js --standalone HauptstimmeJS --debug | uglifyjs --source-map --output ./dist/bundle.js > ./dist/bundle.js",
-    "watch-ts": "chokidar './dev/**/*.ts' -c 'npm run build-ts'"
+    "build": "tsc && npm run typedoc",
+    "postbuild": "browserify ./dist/exports.js --standalone HauptstimmeJS --debug | uglifyjs --source-map --output ./dist/bundle.js > ./dist/bundle.js",
+    "watch": "chokidar './dev/**/*.ts' -c 'npm run build'"
   },
   "devDependencies": {
     "@types/chai": "4.1.2",
@@ -49,9 +49,7 @@
     "uglify-js": "3.3.20"
   },
   "dependencies": {
-    "@types/bluebird-global": "3.5.5",
     "@types/node": "8.0.0",
-    "bluebird": "3.5.1",
     "lodash": "4.17.5"
   }
 }
