--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hauptstimme-js",
-  "version": "3.1.4",
+  "version": "3.1.5",
   "description": "A JavaScript library for music theory",
   "author": "mike-stumpf",
   "license": "MIT",
@@ -21,21 +21,20 @@
     "tone",
     "note"
   ],
-  "main": "./dist/exports.js",
+  "main": "./dist/exports.min.js",
   "typings": "./dist/exports.d.js",
   "scripts": {
     "start": " tsc --watch",
     "typedoc": "typedoc --out ./docs --mode modules --tsconfig ./tsconfig.json ./dev/src/",
     "posttypedoc": "shx cp .nojekyll docs/.nojekyll",
     "test": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec dev/tests/*.test.js dev/tests/**/*.test.js",
-    "build": "tsc && npm run typedoc",
-    "postbuild": "browserify ./dist/exports.js --standalone HauptstimmeJS --debug | uglifyjs --source-map --output ./dist/bundle.js > ./dist/bundle.js",
+    "clean": "shx rm -rf dist/",
+    "build": "npm run clean && tsc && webpack && npm run typedoc",
     "watch": "chokidar './dev/**/*.ts' -c 'npm run build'"
   },
   "devDependencies": {
     "@types/chai": "4.1.2",
     "@types/mocha": "5.0.0",
-    "browserify": "16.2.0",
     "chai": "4.1.2",
     "chokidar-cli": "1.2.0",
     "coveralls": "3.0.0",
@@ -46,10 +45,14 @@
     "shx": "0.2.2",
     "typedoc": "0.11.1",
     "typescript": "2.8.1",
-    "uglify-js": "3.3.20"
+    "webpack-cli": "2.1.2"
   },
   "dependencies": {
     "@types/node": "8.0.0",
-    "lodash": "4.17.5"
+    "awesome-typescript-loader": "5.0.0",
+    "lodash": "4.17.5",
+    "path": "0.12.7",
+    "uglifyjs-webpack-plugin": "1.2.5",
+    "webpack": "4.6.0"
   }
 }
