--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es2015",
+    "target": "es5",
     "module": "commonjs",
     "declaration": true,
+    "lib": [ "es2015", "dom" ],
     "outDir": "./dist",
     "strict": true,
     "sourceMap": true,
