--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "hauptstimme-js",
-  "version": "3.2.0",
+  "version": "4.0.0",
   "description": "A JavaScript library for music theory",
   "author": "mike-stumpf",
   "license": "MIT",
-  "engines": {
-    "node": ">=4.2.4"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/mike-stumpf/hauptstimme.js"
@@ -21,38 +18,12 @@
     "tone",
     "note"
   ],
-  "main": "./dist/exports.min.js",
-  "typings": "./dist/exports.d.js",
-  "scripts": {
-    "start": " tsc --watch",
-    "typedoc": "typedoc --out ./docs --mode modules --tsconfig ./tsconfig.json ./dev/src/",
-    "posttypedoc": "shx cp .nojekyll docs/.nojekyll",
-    "test": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec dev/tests/*.test.js dev/tests/**/*.test.js",
-    "clean": "shx rm -rf dist/",
-    "build": "npm run clean && tsc && webpack && npm run typedoc",
-    "watch": "chokidar './dev/**/*.ts' -c 'npm run build'"
-  },
-  "devDependencies": {
-    "@types/chai": "4.1.2",
-    "@types/mocha": "5.0.0",
-    "chai": "4.1.2",
-    "chokidar-cli": "1.2.0",
-    "coveralls": "3.0.0",
-    "istanbul": "0.4.5",
-    "mocha": "5.0.5",
-    "npm-run-all": "4.1.2",
-    "rimraf": "2.6.2",
-    "shx": "0.2.2",
-    "typedoc": "0.11.1",
-    "typescript": "2.8.1",
-    "webpack-cli": "2.1.2"
-  },
+  "main": "./src/exports.min.js",
+  "devDependencies": {},
   "dependencies": {
-    "@types/node": "8.0.0",
-    "awesome-typescript-loader": "5.0.0",
-    "lodash": "4.17.5",
-    "path": "0.12.7",
-    "uglifyjs-webpack-plugin": "1.2.5",
-    "webpack": "4.6.0"
+    "jest": "26.6.3"
+  },
+  "scripts": {
+    "test": "NODE_OUTPUTMODE=short jest ./test/"
   }
 }
