--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "tone",
     "note"
   ],
-  "main": "./src/exports.min.js",
-  "devDependencies": {},
-  "dependencies": {
+  "main": "./src/exports.js",
+  "devDependencies": {
     "jest": "26.6.3"
+  },
+  "dependencies": {
   },
   "scripts": {
     "test": "NODE_OUTPUTMODE=short jest ./test/"
