ported constants and instruments

--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
   "dependencies": {
   },
   "scripts": {
-    "test": "NODE_OUTPUTMODE=short jest ./test/"
+    "test": "NODE_OUTPUTMODE=short jest"
   }
 }
